tests/NormalTests/paczka1/fuzzy1/38216927.err
Error in line 6: vLC4r A656 0,0
Error in line 1: Ami5mSRu4 A656 26,8
Error in line 12: S139 A656 22,4
Error in line 29: S1fR S555 41,0
Error in line 34: S139 A656 -1,2
